--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my First Coding Lesson</h1>
+    <h1>Elephant and Tortoise</h1>
+    <img src="images/pexels-photo-4577507.jpeg" width="400" height="500" alt="Elephant">
+    <p>You have no doubt heard of the <a href="">Hare and the Tortoise?</a> Well, 
+        <br>
+        this is an African fable from Zaire which shows that Tortoises 
+        <br>
+        are good at winning all over the world. This story is about a 
+        <br>
+        trial of strenght. Who do you think is stronger, an Elephant or 
+        <br>
+        a Tortoise?</p>
 </body>
 </html>
